Fix dark mode

--- a/src/globals.css
+++ b/src/globals.css
@@ -36,7 +36,8 @@
     --radius: 0.5rem;
   }
 
-  .dark {
+  .dark,
+  :root[class~="dark"] {
     --background: 224 71% 4%;
     --foreground: 213 31% 91%;
 
